wip - finished first round of RestEntity management and parsing

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
             <email>jeferson.leao@b2wdigital.com</email>
             <organization>B2W Digital</organization>
         </developer>
+        <developer>
+            <name>Iago Oliveira da Silva</name>
+            <email>silva.io@outlook.com</email>
+            <organization>ZWIFT Inc.</organization>
+        </developer>
     </developers>
 
     <licenses>
