--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <developer>
             <name>Iago Oliveira da Silva</name>
             <email>silva.io@outlook.com</email>
-            <organization>ZWIFT Inc.</organization>
+            <organization></organization>
         </developer>
     </developers>
 
